# ChangeLog for xfce-extra/xfce4-mixer
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mixer/ChangeLog,v 1.73 2007/01/29 20:15:20 welp Exp $

  29 Jan 2007; Peter Weller <welp@gentoo.org> xfce4-mixer-4.4.0.ebuild:
  A number of fixes

  23 Jan 2007; Peter Weller <welp@gentoo.org> xfce4-mixer-4.4.0.ebuild:
  Added debug to IUSE

  23 Jan 2007; Peter Weller <welp@gentoo.org> xfce4-mixer-4.4.0.ebuild:
  Removing usage of virtual/x11,  and hardcoding in depends. Minor clean ups.

*xfce4-mixer-4.4.0 (22 Jan 2007)

  22 Jan 2007; Joshua Nichols <nichoj@gentoo.org> +xfce4-mixer-4.4.0.ebuild:
  Version bump.

  12 Dec 2006; Joshua Nichols <nichoj@gentoo.org> -xfce4-mixer-4.2.1.ebuild,
  -xfce4-mixer-4.2.2.ebuild, -xfce4-mixer-4.2.2-r1.ebuild,
  -xfce4-mixer-4.3.90.1.ebuild, -xfce4-mixer-4.3.90.2.ebuild:
  Pruned old versions with new versions with same or better keywords.

*xfce4-mixer-4.3.99.2 (07 Dec 2006)

  07 Dec 2006; Joshua Nichols <nichoj@gentoo.org>
  +xfce4-mixer-4.3.99.2.ebuild:
  Version bump for RC2. See bug #146563.

  02 Dec 2006; Tiziano Müller <dev-zero@gentoo.org>
  xfce4-mixer-4.2.2-r1.ebuild, xfce4-mixer-4.2.3.ebuild:
  ~x86-fbsd keyword added

  13 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  xfce4-mixer-4.2.3.ebuild:
  Stable on Alpha.

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> xfce4-mixer-4.2.3.ebuild:
  Mark 4.2.3 stable on ia64

*xfce4-mixer-4.3.90.2 (10 Jul 2006)

  10 Jul 2006; Brad Cowan <bcowan@gentoo.org> +xfce4-mixer-4.3.90.2.ebuild:
  Xfce beta 2 builds

  09 Jul 2006; Joshua Kinard <kumba@gentoo.org> xfce4-mixer-4.2.3.ebuild:
  Marked stable on mips.

  22 Apr 2006; Markus Rothe <corsair@gentoo.org> xfce4-mixer-4.2.3.ebuild:
  Stable on ppc64

  20 Apr 2006; Mike Doty <kingtaco@gentoo.org> xfce4-mixer-4.2.3.ebuild:
  amd64 stable, bug 129371

*xfce4-mixer-4.3.90.1 (20 Apr 2006)

  20 Apr 2006; Daniel Ostrow <dostrow@gentoo.org>