@@ -9,14 +9,18 @@ EBUILD xfce4-mixer-4.3.99.2.ebuild 794 RMD160 8946f86e7b9da306bbee428c54a8935029
 MD5 aee40ab2ad309cff6ebe74142993f8f6 xfce4-mixer-4.3.99.2.ebuild 794
 RMD160 8946f86e7b9da306bbee428c54a8935029b42a30 xfce4-mixer-4.3.99.2.ebuild 794
 SHA256 6f14a398ec3a88f3d17dbb86dcd29e642db06214863807e3ca90d1ad0c9ffda9 xfce4-mixer-4.3.99.2.ebuild 794
+EBUILD xfce4-mixer-4.4.0-r1.ebuild 894 RMD160 d4d4103ca62d60861317cf3aad186701ba597883 SHA1 dade5882ab82c0237d09fd5346bd9deacea6feaa SHA256 0460e1aa287beab027437cedbad49a29a9ad484020b114e631ba9f7d7410e8ae
+MD5 87f6e1f0ba12c801fbf656a685e969b3 xfce4-mixer-4.4.0-r1.ebuild 894
+RMD160 d4d4103ca62d60861317cf3aad186701ba597883 xfce4-mixer-4.4.0-r1.ebuild 894
+SHA256 0460e1aa287beab027437cedbad49a29a9ad484020b114e631ba9f7d7410e8ae xfce4-mixer-4.4.0-r1.ebuild 894
 EBUILD xfce4-mixer-4.4.0.ebuild 785 RMD160 d82192d1beb58994522dfee87b269696005630ca SHA1 bd5dac18a2f7e7631d57ee36f938c64d2a1ce25c SHA256 9c4eb71e832a9961349a461d6b783c0c627bbc66c365ac4e4ee4fff7f3974637
 MD5 8ab407e4dd5836f409be01ed1ad1ec41 xfce4-mixer-4.4.0.ebuild 785
 RMD160 d82192d1beb58994522dfee87b269696005630ca xfce4-mixer-4.4.0.ebuild 785
 SHA256 9c4eb71e832a9961349a461d6b783c0c627bbc66c365ac4e4ee4fff7f3974637 xfce4-mixer-4.4.0.ebuild 785
-MISC ChangeLog 9001 RMD160 89554d6e4b63b28634395bd6795683ca12f8dce5 SHA1 f63e5022098e02a2adfc8aa4fe8abfebc90e3d21 SHA256 c24daf4b302375b6a882edca5e1a37fe145834a87ac1541a158baa6c5b42ac90
-MD5 e65acedede8d979f7f52eed7174cc8b4 ChangeLog 9001
-RMD160 89554d6e4b63b28634395bd6795683ca12f8dce5 ChangeLog 9001
-SHA256 c24daf4b302375b6a882edca5e1a37fe145834a87ac1541a158baa6c5b42ac90 ChangeLog 9001
+MISC ChangeLog 9149 RMD160 e0a6301db2f0f0e56a3ad29493f17c85f77d8ae2 SHA1 a470da77acd394d79b0039fb244b624242e28fdb SHA256 16ef11337d02b03a94d77610352565e151f5c2e86bb2fa3713301f7784b372cc
+MD5 6f4daa8b192755eb33dc298356fca9dd ChangeLog 9149
+RMD160 e0a6301db2f0f0e56a3ad29493f17c85f77d8ae2 ChangeLog 9149
+SHA256 16ef11337d02b03a94d77610352565e151f5c2e86bb2fa3713301f7784b372cc ChangeLog 9149
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
@@ -30,3 +34,6 @@ SHA256 5cb58aa49137b21bb2877c5fb641f12a0bec4746fe2e40e68c955405ee5d2e34 files/di
 MD5 181e0d5e00bcffbd2db68d8d2d4766f9 files/digest-xfce4-mixer-4.4.0 256
 RMD160 b86b6e2a5b57e29080d3aa0272d5ad2f36c08584 files/digest-xfce4-mixer-4.4.0 256
 SHA256 5a75473dd0c1e13bfd264281830aa63d54c70e2947e7bb5fb79f9272606632e7 files/digest-xfce4-mixer-4.4.0 256
+MD5 181e0d5e00bcffbd2db68d8d2d4766f9 files/digest-xfce4-mixer-4.4.0-r1 256
+RMD160 b86b6e2a5b57e29080d3aa0272d5ad2f36c08584 files/digest-xfce4-mixer-4.4.0-r1 256
+SHA256 5a75473dd0c1e13bfd264281830aa63d54c70e2947e7bb5fb79f9272606632e7 files/digest-xfce4-mixer-4.4.0-r1 256
