@@ -1,6 +1,11 @@
 # ChangeLog for xfce-extra/xfce4-mixer
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mixer/ChangeLog,v 1.73 2007/01/29 20:15:20 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mixer/ChangeLog,v 1.74 2007/01/31 16:36:25 welp Exp $
+
+*xfce4-mixer-4.4.0-r1 (31 Jan 2007)
+
+  31 Jan 2007; Peter Weller <welp@gentoo.org> +xfce4-mixer-4.4.0-r1.ebuild:
+  Make a desktop entry, revbumped
 
   29 Jan 2007; Peter Weller <welp@gentoo.org> xfce4-mixer-4.4.0.ebuild:
   A number of fixes
